# memlayer-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.adk-server  Dockerfile.go  Dockerfile.python  Dockerfile.web  GEMINI.md  LICENSE  README.md  docker-compose.yml  go.mod  go.sum
cmd/adk-server/: agent.go  github_service.go  jira_service.go  local_tools.go  main.go  mcp_client.go  mcp_client_test.go  models.go
docs/: how-it-works.md
go/: README.md  go.mod  go.sum
go/cmd/adk-server/: api_client.go  finnhub_tools.go  local_tools.go  main.go  mcp_client.go
python/: README.md  pyproject.toml
python/src/memlayer_agent/: __init__.py  __main__.py  chat.py  finnhub_tools.py  local_tools.py  mcp_client.py  server.py  session.py
scripts/: debug_sse.go
web/: auth.html  index.html  nginx.conf
